SPI1 communication with SPI2 in STM32 done

--- a/STM32F411VET.ioc
+++ b/STM32F411VET.ioc
@@ -17,16 +17,15 @@ Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PA4
 Mcu.Pin1=PA5
-Mcu.Pin10=VP_SYS_VS_Systick
 Mcu.Pin2=PA6
 Mcu.Pin3=PA7
-Mcu.Pin4=PB12
-Mcu.Pin5=PB13
-Mcu.Pin6=PB14
-Mcu.Pin7=PB15
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=11
+Mcu.Pin4=PB13
+Mcu.Pin5=PB14
+Mcu.Pin6=PB15
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -58,9 +57,6 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PB12.Locked=true
-PB12.Mode=NSS_Signal_Hard_Input
-PB12.Signal=SPI2_NSS
 PB13.Locked=true
 PB13.Mode=Full_Duplex_Slave
 PB13.Signal=SPI2_SCK
@@ -130,9 +126,8 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,VirtualNSS
+SPI2.IPParameters=VirtualType,Mode,Direction
 SPI2.Mode=SPI_MODE_SLAVE
-SPI2.VirtualNSS=VM_NSSHARD
 SPI2.VirtualType=VM_SLAVE
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
