--- a/STM32F411VET.ioc
+++ b/STM32F411VET.ioc
@@ -12,20 +12,23 @@ Mcu.IP1=RCC
 Mcu.IP2=SPI1
 Mcu.IP3=SPI2
 Mcu.IP4=SYS
-Mcu.IPNb=5
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PA4
-Mcu.Pin1=PA5
-Mcu.Pin2=PA6
-Mcu.Pin3=PA7
-Mcu.Pin4=PB13
-Mcu.Pin5=PB14
-Mcu.Pin6=PB15
-Mcu.Pin7=PA13
-Mcu.Pin8=PA14
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=10
+Mcu.Pin0=PA2
+Mcu.Pin1=PA3
+Mcu.Pin10=PA14
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin2=PA4
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PB13
+Mcu.Pin7=PB14
+Mcu.Pin8=PB15
+Mcu.Pin9=PA13
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -42,11 +45,16 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SPI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=CS
 PA4.Locked=true
@@ -97,7 +105,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
@@ -119,16 +127,17 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOInputMFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
-SPI1.CalculateBaudRate=1000.0 KBits/s
+SPI1.CalculateBaudRate=8.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction
 SPI2.Mode=SPI_MODE_SLAVE
 SPI2.VirtualType=VM_SLAVE
+USART2.IPParameters=VirtualMode
+USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
