--- a/STM32F411VET.ioc
+++ b/STM32F411VET.ioc
@@ -9,14 +9,19 @@ Mcu.CPN=STM32F411VET6
 Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP2=RTC
+Mcu.IP3=SYS
+Mcu.IPNb=4
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PA13
-Mcu.Pin1=PA14
-Mcu.Pin2=VP_SYS_VS_Systick
-Mcu.PinsNb=3
+Mcu.Pin0=PH0 - OSC_IN
+Mcu.Pin1=PH1 - OSC_OUT
+Mcu.Pin2=PA13
+Mcu.Pin3=PA14
+Mcu.Pin4=VP_RTC_VS_RTC_Activate
+Mcu.Pin5=VP_RTC_VS_RTC_Calendar
+Mcu.Pin6=VP_SYS_VS_Systick
+Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -37,6 +42,10 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
+PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
+PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
+PH1\ -\ OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -69,27 +78,41 @@ ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
-RCC.AHBFreq_Value=16000000
-RCC.APB1Freq_Value=16000000
-RCC.APB2Freq_Value=16000000
-RCC.CortexFreq_Value=16000000
+RCC.48MHZClocksFreq_Value=24000000
+RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
+RCC.AHBFreq_Value=8000000
+RCC.APB1Freq_Value=8000000
+RCC.APB1TimFreq_Value=8000000
+RCC.APB2Freq_Value=8000000
+RCC.APB2TimFreq_Value=8000000
+RCC.CortexFreq_Value=8000000
+RCC.EthernetFreq_Value=8000000
+RCC.FCLKCortexFreq_Value=8000000
 RCC.FamilyName=M
-RCC.HSE_VALUE=25000000
+RCC.HCLKFreq_Value=8000000
+RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
-RCC.I2SClocksFreq_Value=96000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB2Freq_Value,CortexFreq_Value,FamilyName,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,PLLCLKFreq_Value,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.I2SClocksFreq_Value=48000000
+RCC.IPParameters=48MHZClocksFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,PLLCLKFreq_Value,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_RTC_Clock_Source,RCC_RTC_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.PLLCLKFreq_Value=96000000
-RCC.PLLQCLKFreq_Value=48000000
-RCC.RTCFreq_Value=32000
-RCC.RTCHSEDivFreq_Value=12500000
+RCC.PLLCLKFreq_Value=48000000
+RCC.PLLQCLKFreq_Value=24000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_HSE_DIV25
+RCC.RCC_RTC_Clock_Source_FROM_HSE=RCC_RTCCLKSOURCE_HSE_DIV25
+RCC.RTCFreq_Value=320000
+RCC.RTCHSEDivFreq_Value=320000
 RCC.SYSCLKFreq_VALUE=16000000
-RCC.VCOI2SOutputFreq_Value=192000000
-RCC.VCOInputFreq_Value=1000000
-RCC.VCOInputMFreq_Value=1000000
-RCC.VCOOutputFreq_Value=192000000
-RCC.VcooutputI2S=96000000
+RCC.VCOI2SOutputFreq_Value=96000000
+RCC.VCOInputFreq_Value=500000
+RCC.VCOInputMFreq_Value=500000
+RCC.VCOOutputFreq_Value=96000000
+RCC.VcooutputI2S=48000000
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
